--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <link href="https://fonts.googleapis.com/css2?family=Domine&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
+    <link href="https://fonts.googleapis.com/css2?family=Domine&amp;display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <title>Contribute To This Project</title>
   </head>
   <body>
@@ -19,11 +21,15 @@
           <!-- Night Mode Creation -->
           <div class="nightmode">
             <div class="toggle-box">
-              <input type="checkbox" name="checkbox1" id="toggle-box-checkbox">
+              <input type="checkbox" name="checkbox1" id="toggle-box-checkbox" />
               <label for="toggle-box-checkbox" class="toggle-box-label-left"></label>
               <label for="toggle-box-checkbox" class="toggle-box-label"></label>
             </div>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous"></script>
+            <script
+              src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+              integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+              crossorigin="anonymous"
+            ></script>
           </div>
           <!-- / Night Mode Creation -->
         </div>
@@ -37,7 +43,12 @@
               This is a tutorial to help first-time contributors participate in a simple and easy project. Get more
               comfortable using GitHub and make your first open source contribution. It's quick and easy.
             </p>
-            <a class="button" href="https://github.com/Syknapse/Contribute-To-This-Project/blob/master/README.md" target="_blank" title="Go to project README - A step by step tutorial">
+            <a
+              class="button"
+              href="https://github.com/Syknapse/Contribute-To-This-Project/blob/master/README.md"
+              target="_blank"
+              title="Go to project README - A step by step tutorial"
+            >
               Learn how to contribute
               <i class="fas fa-long-arrow-alt-right"></i>
             </a>
@@ -46,7 +57,17 @@
         <div class="column">
           <div class="column-right">
             <div class="twitter-button">
-              <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Contribute To This Project. An easy Git and GitHub project for first-time contributors, with a full tutorial." data-url="https://github.com/Syknapse/Contribute-To-This-Project" data-via="Syknapse" data-hashtags="100DaysOfCode" data-show-count="false" title="Tweet this project">
+              <a
+                href="https://twitter.com/share?ref_src=twsrc%5Etfw"
+                class="twitter-share-button"
+                data-size="large"
+                data-text="Contribute To This Project. An easy Git and GitHub project for first-time contributors, with a full tutorial."
+                data-url="https://github.com/Syknapse/Contribute-To-This-Project"
+                data-via="Syknapse"
+                data-hashtags="100DaysOfCode"
+                data-show-count="false"
+                title="Tweet this project"
+              >
                 Tweet
               </a>
               <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -58,15 +79,15 @@
       </div>
 
       <div class="searchContainer">
-        <input id="searchbar" type="search" name="search" placeholder="Search for your card here!">
+        <input id="searchbar" type="search" name="search" placeholder="Search for your card here!" />
       </div>
       <div class="grid" id="contributions">
-<!-- ================================================ --> 
-<!-- ==================  TEMPLATE  ================== --> 
-<!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
- 
-<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-<div class="card">
+        <!-- ================================================ -->
+        <!-- ==================  TEMPLATE  ================== -->
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -90,28 +111,32 @@
             </ul>
           </div>
         </div>
-<!-- ________ *TEMPLATE* Contributor card END ________  -->
- 
-<!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines --> 
-<!-- ============== ^^^^ TEMPLATE ^^^^ ============== --> 
-<!-- ================================================ -->
- 
-<!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below --> 
-<!-- Keep one line of space above and below your card --> 
-<!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
- 
-<!-- ========= START ========= -->
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-<!-- ========= Card 1 START =========  -->
-<div class="card">
+        <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
+        <!-- ============== ^^^^ TEMPLATE ^^^^ ============== -->
+        <!-- ================================================ -->
+
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+        <!-- Keep one line of space above and below your card -->
+        <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ========= START ========= -->
+
+        <!-- ========= Card 1 START =========  -->
+        <div class="card">
           <p class="name">Gustavo Santiago</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/gustavo-santiago-541641144/" target="_blank">Gustavo Santiago &nbsp;</a>
+            <a href="https://www.linkedin.com/in/gustavo-santiago-541641144/" target="_blank">
+              Gustavo Santiago &nbsp;
+            </a>
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/gustavorsanti" target="_blank">gustavorsanti &nbsp; &nbsp; &nbsp;</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/gustavo-ribeiro-santiago" target="_blank">gustavo-ribeiro-santiago &nbsp;</a>
+            <a href="https://www.github.com/gustavo-ribeiro-santiago" target="_blank">
+              gustavo-ribeiro-santiago &nbsp;
+            </a>
           </p>
           <p class="about">I am a Full Stack Developer looking to make open source contributions.</p>
           <div class="resources">
@@ -135,10 +160,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 1 END =========  -->
+        <!-- ========= Card 1 END =========  -->
 
-<!-- ========= Card 2 START =========  -->
-<div class="card">
+        <!-- ========= Card 2 START =========  -->
+        <div class="card">
           <p class="name">Katelyn</p>
           <p class="contact">
             <i class="fab fa-github"></i>
@@ -167,10 +192,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 2 END =========  -->
+        <!-- ========= Card 2 END =========  -->
 
-<!-- ========= Card 3 START =========  -->
-<div class="card">
+        <!-- ========= Card 3 START =========  -->
+        <div class="card">
           <p class="name">Carmeshia</p>
           <p class="contact">
             <i class="fab fa-github"></i>
@@ -189,17 +214,21 @@
                 <a href="https://www.codecademy.com/" target="_blank" title="Second Resource">Code Academy</a>
               </li>
               <li>
-                <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank" title="Third resource">
+                <a
+                  href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
+                  target="_blank"
+                  title="Third resource"
+                >
                   CSS-Tricks
                 </a>
               </li>
             </ul>
           </div>
         </div>
-<!-- ========= Card 3 END =========  -->
+        <!-- ========= Card 3 END =========  -->
 
-<!-- ========= Card 4 START =========  -->
-<div class="card">
+        <!-- ========= Card 4 START =========  -->
+        <div class="card">
           <p class="name">Prakhar</p>
           <p class="contact">
             <i class="fab fa-github"></i>
@@ -221,10 +250,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 4 END =========  -->
+        <!-- ========= Card 4 END =========  -->
 
-<!-- ========= Card 5 START =========  -->
-<div class="card">
+        <!-- ========= Card 5 START =========  -->
+        <div class="card">
           <p class="name">Bandhan Majumder</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -237,7 +266,11 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science" target="_blank" title="First Resource">
+                <a
+                  href="https://pll.harvard.edu/course/cs50-introduction-computer-science"
+                  target="_blank"
+                  title="First Resource"
+                >
                   CS50
                 </a>
               </li>
@@ -250,10 +283,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 5 END =========  -->
+        <!-- ========= Card 5 END =========  -->
 
-<!-- ========= Card 6 START =========  -->
-<div class="card">
+        <!-- ========= Card 6 START =========  -->
+        <div class="card">
           <p class="name">Jen</p>
           <p class="contact">
             <i class="fab fa-github"></i>
@@ -270,17 +303,21 @@
                 <a href="https://www.freecodecamp.org/" target="_blank" title="Free Code Camp">Free Code Camp</a>
               </li>
               <li>
-                <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science" target="_blank" title="CS50">
+                <a
+                  href="https://pll.harvard.edu/course/cs50-introduction-computer-science"
+                  target="_blank"
+                  title="CS50"
+                >
                   CS50 Harvard Introduction to Computer Science
                 </a>
               </li>
             </ul>
           </div>
         </div>
-<!-- ========= Card 6 END =========  -->
+        <!-- ========= Card 6 END =========  -->
 
-<!-- ========= Card 7 START =========  -->
-<div class="card">
+        <!-- ========= Card 7 START =========  -->
+        <div class="card">
           <p class="name">Michael Amare</p>
           <p class="contact">
             <i class="fab fa-github"></i>
@@ -299,7 +336,11 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.frontendinterviewhandbook.com/" target="_blank" title="Front End Interview Handbook">
+                <a
+                  href="https://www.frontendinterviewhandbook.com/"
+                  target="_blank"
+                  title="Front End Interview Handbook"
+                >
                   Front End Interview Handbook
                 </a>
               </li>
@@ -311,10 +352,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 7 END =========  -->
+        <!-- ========= Card 7 END =========  -->
 
-<!-- ========= Card 8 START =========  -->
-<div class="card">
+        <!-- ========= Card 8 START =========  -->
+        <div class="card">
           <p class="name">K0Ju</p>
           <p class="contact">
             <i class="fab fa-github"></i>
@@ -340,10 +381,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 8 END =========  -->
+        <!-- ========= Card 8 END =========  -->
 
-<!-- ========= Card 9 START =========  -->
-<div class="card">
+        <!-- ========= Card 9 START =========  -->
+        <div class="card">
           <p class="name">Deadly-Carp</p>
           <p class="contact">
             <i class="fab fa-discord"></i>
@@ -369,10 +410,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 9 END =========  -->
+        <!-- ========= Card 9 END =========  -->
 
-<!-- ========= Card 10 START =========  -->
-<div class="card">
+        <!-- ========= Card 10 START =========  -->
+        <div class="card">
           <p class="name">Winkel Yin</p>
           <p class="contact">
             <a href="https://www.github.com/Winkel515" target="_blank">
@@ -401,18 +442,27 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 10 END =========  -->
+        <!-- ========= Card 10 END =========  -->
 
-<!-- ========= END ========= -->
- 
-<!-- <<<<< Do not change anything below this line >>>>> --> 
-<!-- -------------------------------------------------- -->
-</div>
-      <hr>
+        <!-- ========= END ========= -->
+
+        <!-- <<<<< Do not change anything below this line >>>>> -->
+        <!-- -------------------------------------------------- -->
+      </div>
+      <hr />
       <button id="topButton" title="Go to top">
-        <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="1em" width="1em" viewBox="0 0 40 40" style="vertical-align: middle; font-size: 2.25em">
+        <svg
+          fill="currentColor"
+          preserveAspectRatio="xMidYMid meet"
+          height="1em"
+          width="1em"
+          viewBox="0 0 40 40"
+          style="vertical-align: middle; font-size: 2.25em"
+        >
           <g>
-            <path d="m21.7 9.3l-7.9 7.9c-0.6 0.6-0.6 1.7 0 2.3s1.7 0.7 2.4 0l3.8-3.8v12.6c0 1 0.7 1.7 1.7 1.7s1.6-0.7 1.6-1.7v-12.6l3.9 3.8c0.3 0.3 0.7 0.5 1.1 0.5s0.9-0.2 1.2-0.5c0.7-0.6 0.7-1.7 0-2.3l-7.8-7.9z"></path>
+            <path
+              d="m21.7 9.3l-7.9 7.9c-0.6 0.6-0.6 1.7 0 2.3s1.7 0.7 2.4 0l3.8-3.8v12.6c0 1 0.7 1.7 1.7 1.7s1.6-0.7 1.6-1.7v-12.6l3.9 3.8c0.3 0.3 0.7 0.5 1.1 0.5s0.9-0.2 1.2-0.5c0.7-0.6 0.7-1.7 0-2.3l-7.8-7.9z"
+            ></path>
           </g>
         </svg>
       </button>
@@ -424,6 +474,5 @@
       </footer>
     </div>
     <script type="module" src="assets/script.js"></script>
-  
-
-</body></html>
+  </body>
+</html>
