--- a/index.html
+++ b/index.html
@@ -121,6 +121,31 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+                  <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Tim</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Cuizi612/" target="_blank">Tim</a>
+          </p>
+          <p class="about">Hello, by trial and error I hope to contribute successfully!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.runoob.com/js/js-tutorial.html" target="_blank" title="First Resource">JS</a>
+              </li>
+              <li>
+                <a href="https://www.runoob.com/html/html-tutorial.html" target="_blank" title="Second Resource">HTML</a>
+              </li>
+              <li>
+                <a href="https://www.runoob.com/css/css-tutorial.html" target="_blank" title="Third resource">CSS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Shreya</p>
