--- a/index.html
+++ b/index.html
@@ -669,6 +669,30 @@
           </div>
         </div>
         <!-- ========= Card 12 END =========  -->
+        <div class="card">
+          <p class="name">Vera</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">tschanzvera</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">tschanzvera</a>
+          </p>
+          <p class="about">Student</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <!-- ========= END ========= -->
 
