--- a/index.html
+++ b/index.html
@@ -111,6 +111,60 @@
             </ul>
           </div>
         </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">NorthOuterTowner</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+              <a href="https://www.twitter.com/your_user_handle" target="_blank">NoTwitter</a>
+              <i class="fab fa-github"></i>
+              <a href="https://www.github.com/NorthOuterTowner" target="_blank">NorthOuterTowner</a>
+          </p>
+          <p class="about">A freshman exploring computer science in Beijing, China.</p>
+                  <div class="resources">
+                    <p>3 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a href="https://nn.labml.ai/" target="_blank" title="First Resource">Implement AI here!</a>
+                      </li>
+                      <li>
+                        <a href="https://github.com/NorthOuterTowner/C-management" target="_blank" title="Second Resource">My homework last term, could u look it and give me any suggestion?Really Thank u!</a>
+                      </li>
+                      <li>
+                        <a href="https://gitee.com/iOceanPlus_Forked/awesome-programming-books/blob/master/design-pattern/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%EF%BC%9A%E5%8F%AF%E5%A4%8D%E7%94%A8%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E8%BD%AF%E4%BB%B6%E7%9A%84%E5%9F%BA%E7%A1%80.pdf" target="_blank" title="Third resource">Design Pattern</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+                        <!-- ________ *TEMPLATE: jafurman* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">jafurman</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jafurman" target="_blank">Jafurman :3</a>
+          </p>
+          <p class="about">I like cats and code and games</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://replit.com/" target="_blank" title="First Resource">Replit</a>
+              </li>
+              <li>
+                <a href="https://www.coursera.org/courses?query=web%20development" target="_blank" title="Second Resource">Coursera</a>
+              </li>
+              <li>
+                <a href="https://copilot.microsoft.com/" target="_blank" title="Third resource">Copilot</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ================================================ -->
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
@@ -160,14 +214,7 @@
           </p>
           <p class="about">Hello! I'm a Software Engineer from Poland.</p>
           <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="https://www.youtube.com/@LowLevelLearning" target="_blank" title="First Resource">
-                  Low Level Learning
-                </a>
-              </li>
-              <li>
+          i>
                 <a href="https://www.youtube.com/@dreamsofcode" target="_blank" title="Second Resource">
                   Dreams Of Code
                 </a>
@@ -178,7 +225,14 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->  <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@LowLevelLearning" target="_blank" title="First Resource">
+                  Low Level Learning
+                </a>
+              </li>
+              <l
 
         <!-- ________  Ritik Shrestha Contributor card START ________  -->
         <div class="card">
