--- a/index.html
+++ b/index.html
@@ -1961,6 +1961,31 @@
           </div>
         </div>
 
+         <!-- ________ kyahcicer Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Ky</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kyahcicer" target="_blank">kyahcicer</a>
+          </p>
+          <p class="about">I like programming, gaming, music, and anyhting creative!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.greenteapress.com/thinkpython/thinkpython.pdf" target="_blank" title="Think Python">Think Python PDF Textbook</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="w3schools">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@programmingwithmosh" target="_blank" title="programmingwithmosh">Programming with Mosh on Youtube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ kyahcicer Contributor card END ________  -->
+
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
