--- a/index.html
+++ b/index.html
@@ -121,6 +121,35 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+
+               <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+               <div class="card">
+                <p class="name">Tanmay</p>
+                <p class="contact">
+                  <i class="fab fa-x-twitter"></i>
+                  <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+                  <i class="fab fa-github"></i>
+                  <a href="https://www.github.com/Tanmay123Goraksha" target="_blank">Your handle</a>
+                </p>
+                <p class="about">Elden Lord</p>
+                <div class="resources">
+                  <p>3 Useful Dev Resources</p>
+                  <ul>
+                    <li>
+                      <a href="https://www.w3schools.com/cpp/" target="_blank" title="First Resource">Resource 1</a>
+                    </li>
+                    <li>
+                      <a href="https://www.geeksforgeeks.org/cpp-tutorial/" target="_blank" title="Second Resource">Resource 2</a>
+                    </li>
+                    <li>
+                      <a href="https://www.learncpp.com/" target="_blank" title="Third resource">Resource 3</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!-- ________ *TEMPLATE* Contributor card END ________  -->
+      
+      
         <div class="card">
           <p class="name">harshil gupta</p>
           <p class="contact">
