--- a/index.html
+++ b/index.html
@@ -120,7 +120,36 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+         <!-- ________ *Lanhoiba* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Lanthoiba</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/khumanthemlanthoibameitei/" target="_blank">KHUMANTHEM LANTHOIBA MEITEI</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Lanthoiba2022" target="_blank">Lanthoiba2022</a>
+          </p>
+          <p class="about">B.Tech CSE Final year undergrad from India</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://medium.com/" target="_blank" title="Second Resource">Medium</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Third resource">YouTube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Lanthoiba* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         
         <div class="card">
           <p class="name">harshil gupta</p>
           <p class="contact">
