--- a/index.html
+++ b/index.html
@@ -120,6 +120,32 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Aaditya Shirke</p>
+          <p class="contact">
+            <i class="fab fa-LinkedIn"></i>
+            <a href="https://www.linkedin.com/in/aaditya-shirke-b29791292/" target="_blank">LinkedIn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Aadii-01" target="_blank">GitHub</a>
+          </p>
+          <p class="about">FY BTech IT undergrad</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Second resource">YouTube</a>
+              </li>
+              <li>
+                <a href="https://medium.com/" target="_blank" title="Third Resource">Medium</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ *Lanhoiba* Contributor card START ________  -->
         <div class="card">
