--- a/index.html
+++ b/index.html
@@ -118,6 +118,31 @@
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+      <div class="card">
+        <p class="name">Ansh Grover</p>
+        <p class="contact">
+          <i class="fab fa-x-linkedin"></i>
+          <a href="https://www.linkedin.com/in/anshgrover23" target="_blank">@anshgrover23</a>
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/Anshgrover23" target="_blank">@Anshgrover23</a>
+        </p>
+        <p class="about">👨‍💻 Passionate web developer focused on JavaScript</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://youtu.be/EerdGm-ehJQ?si=eF_cjMWIowB42k1U" target="_blank" title="First Resource">Great resource to learn Javascript</a>
+            </li>
+            <li>
+              <a href="https://youtu.be/G3e-cpL7ofc?si=lkgWBnxPCYeGjwr7" target="_blank" title="Second Resource">Great start to Html & CSS language</a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/@chaiaurcode" target="_blank" title="Third resource">A Great coding youtube Channel Suggestion</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
       <!-- ________ Emerson card START ________  -->
       <div class="card">
                           <p class="name">Emerson</p>
