--- a/index.html
+++ b/index.html
@@ -117,12 +117,11 @@
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
        <!-- ________ Rishabh Gupta Card START ________  -->
        <div class="card">
         <p class="name">Rishabh Gupta</p>
         <p class="contact">
-          <i class="fab fa-x-twitter"></i>
-          <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
           <i class="fab fa-github"></i>
           <a href="https://www.github.com/MasterSINISTER" target="_blank">Github</a>
         </p>
@@ -131,13 +130,13 @@
           <p>3 Useful Dev Resources</p>
           <ul>
             <li>
-              <a href="#" target="_blank" title="First Resource">GeeksForGeeks</a>
+              <a href="https://www.geeksforgeeks.org" target="_blank" title="First Resource">GeeksForGeeks</a>
             </li>
             <li>
-              <a href="#" target="_blank" title="Second Resource">Daily.dev</a>
+              <a href="https://www.daily.dev" target="_blank" title="Second Resource">Daily.dev</a>
             </li>
             <li>
-              <a href="#" target="_blank" title="Third resource">Medium</a>
+              <a href="https://www.medium.com" target="_blank" title="Third resource">Medium</a>
             </li>
           </ul>
         </div>
