--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+      <!-- ________Mahesh Card START________________ -->
+      <div class="card">
+        <p class="name">Mahesh Suryawanshi</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://x.com/mahesh_anant" target="_blank">@mahesh_anant</a>
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/maheshcodes12" target="_blank">maheshcodes12</a>
+        </p>
+        <p class="about">Hii! I am a web development enthusiast and currently Studying Information Technology</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://v2.scrimba.com/learn-react-c0e" target="_blank" title="First Resource">Learn React</a>
+            </li>
+            <li>
+              <a href="https://jsonplaceholder.typicode.com/" target="_blank" title="Second Resource">Free and fake Api for you</a>
+            </li>
+            <li>
+              <a href="https://www.fontshare.com/" target="_blank" title="Third resource">Some Quality fonts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+       <!-- ________Mahesh Card END________________ -->
+
       <!-- ________ Emerson card START ________  -->
       <div class="card">
                           <p class="name">Emerson</p>
