--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+ <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">SHIHAN ZHENG</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/shihan-zheng-585ba72b5/" target="_blank">shihan zheng</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/zhengshihan" target="_blank">zhengshihan</a>
+          </p>
+          <p class="about">I am an information systems management postgraduate graduated from NUIG, keen to become a fullstack developer in IT industry</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/frontend" target="_blank" title="First Resource">Frontend Developer Roadmap</a>
+              </li>
+              <li>
+                <a href="https://www.techinterviewhandbook.org/software-engineering-interview-guide/" target="_blank" title="Second Resource">Tech Interview Handbook</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Third resource">MDN Web Docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
       <!-- ________ Emerson card START ________  -->
       <div class="card">
                           <p class="name">Emerson</p>
